ffi/poc/codec/crates/ak-abi/src/generated_corpus_nounk/abi.rs

impl ak_efix_WireZoo {
    pub const ZERO: Self = ak_efix_WireZoo {
        v_int32: 0,
        v_int64: 0,
        v_bool: 0,
        v_double: 0.0,
        v_fixed32: 0,
        v_string: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        v_bytes: ak_str { data: ::core::ptr::null(), len: 0, tc: None },
        v_enum: 0,
        v_msg: ak_efix_Timestamp::ZERO,
        v_big_tag: 0,
        presence: 0,
    };
}
pub const AK_EFIX_WIREZOO_PRESENT_V_MSG: u32 = 1 << 0;

/// Decode group for `WireZoo`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dfix_WireZoo {
    pub v_int32: i32,
    pub v_int64: i64,
    pub v_bool: u8,
    pub v_double: f64,
    pub v_fixed32: u32,
    pub v_string: ak_span,
    pub v_bytes: ak_span,
    pub v_enum: i32,
    pub v_msg: ak_dfix_Timestamp,
    pub v_big_tag: i32,
    pub presence: u32,
}
impl ak_dfix_WireZoo {
    pub const ZERO: Self = ak_dfix_WireZoo {
        v_int32: 0,
        v_int64: 0,
        v_bool: 0,
        v_double: 0.0,
        v_fixed32: 0,
        v_string: ak_span { off: 0, len: 0, coder: 0 },
        v_bytes: ak_span { off: 0, len: 0, coder: 0 },
        v_enum: 0,
        v_msg: ak_dfix_Timestamp::ZERO,
        v_big_tag: 0,
        presence: 0,
    };
}
pub const AK_DFIX_WIREZOO_PRESENT_V_MSG: u32 = 1 << 0;

/// Encode vtable for `Timestamp`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_Timestamp {
    /// Reserved: an empty struct has no defined size in C.
    pub _reserved: *const c_void,
}

/// Decode vtable for `Timestamp` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_Timestamp {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_Timestamp),
    >,
}

/// Encode vtable for `Duration`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_Duration {
    /// Reserved: an empty struct has no defined size in C.
    pub _reserved: *const c_void,
}

/// Decode vtable for `Duration` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_Duration {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_Duration),
    >,
}

/// Encode vtable for `ResultRaw`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_ResultRaw {
    /// Reserved: an empty struct has no defined size in C.
    pub _reserved: *const c_void,
}

/// Decode vtable for `ResultRaw` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_ResultRaw {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_ResultRaw),
    >,
}

/// Encode vtable for `TaskOptions`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_TaskOptions {
    pub loop_options: Option<ak_loop_f>,
}

/// Decode vtable for `TaskOptions` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_TaskOptions {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_TaskOptions),
    >,
    pub add_options: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_dfix_TaskOptionsOptionsEntry, i32),
    >,
}

/// Encode vtable for `TaskOutput`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_TaskOutput {
    /// Reserved: an empty struct has no defined size in C.
    pub _reserved: *const c_void,
}

/// Decode vtable for `TaskOutput` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_TaskOutput {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_TaskOutput),
    >,
}

/// Encode vtable for `TaskDetailed`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_TaskDetailed {
    pub loop_parent_task_ids: Option<ak_loop_f>,
    pub loop_data_dependencies: Option<ak_loop_f>,
    pub loop_expected_output_ids: Option<ak_loop_f>,
    pub loop_retry_of_ids: Option<ak_loop_f>,
    pub loop_options_options: Option<ak_loop_f>,
}

/// Decode vtable for `TaskDetailed` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_TaskDetailed {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_TaskDetailed),
    >,
    pub add_parent_task_ids: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_span, i32),
    >,
    pub add_data_dependencies: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_span, i32),
    >,
    pub add_expected_output_ids: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_span, i32),
    >,
    pub add_retry_of_ids: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_span, i32),
    >,
    pub add_options_options: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_dfix_TaskOptionsOptionsEntry, i32),
    >,
}

/// Encode vtable for `TaskSummary`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_TaskSummary {
    pub loop_options_options: Option<ak_loop_f>,
}

/// Decode vtable for `TaskSummary` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_TaskSummary {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_TaskSummary),
    >,
    pub add_options_options: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_dfix_TaskOptionsOptionsEntry, i32),
    >,
}

/// Encode vtable for `Probe`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_Probe {
    /// Reserved: an empty struct has no defined size in C.
    pub _reserved: *const c_void,
}

/// Decode vtable for `Probe` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_Probe {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_Probe),
    >,
}

/// Encode vtable for `Empty`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_Empty {
    /// Reserved: an empty struct has no defined size in C.
    pub _reserved: *const c_void,
}

/// Decode vtable for `Empty` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_Empty {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_Empty),
    >,
}

/// Encode vtable for `UploadResultData`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_UploadResultData {
    /// Reserved: an empty struct has no defined size in C.
    pub _reserved: *const c_void,
}

/// Decode vtable for `UploadResultData` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_UploadResultData {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_UploadResultData),
    >,
}

/// Encode vtable for `MetricsBatch`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_MetricsBatch {
    pub loop_ticks: Option<ak_loop_f>,
    pub loop_values: Option<ak_loop_f>,
    pub loop_codes: Option<ak_loop_f>,
    pub loop_flags: Option<ak_loop_f>,
    pub loop_statuses: Option<ak_loop_f>,
}

/// Decode vtable for `MetricsBatch` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_MetricsBatch {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_MetricsBatch),
    >,
    pub add_ticks: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const i64, i32),
    >,
    pub add_values: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const f64, i32),
    >,
    pub add_codes: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const i32, i32),
    >,
    pub add_flags: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const u8, i32),
    >,
    pub add_statuses: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const i32, i32),
    >,
}

/// Encode vtable for `Pair`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_Pair {
    /// Reserved: an empty struct has no defined size in C.
    pub _reserved: *const c_void,
}

/// Decode vtable for `Pair` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_Pair {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_Pair),
    >,
}

/// Encode vtable for `ListResultsResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_ListResultsResponse {
    pub loop_results: Option<ak_loop_f>,
}

/// Decode vtable for `ListResultsResponse` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_ListResultsResponse {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_ListResultsResponse),
    >,
    pub add_results: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_dfix_ResultRaw, i32),
    >,
}

/// Encode vtable for `ListTasksDetailedResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_ListTasksDetailedResponse {
    pub loop_tasks: Option<ak_loop_f>,
    /// The element type has loop slots of its own (ABI v1 section 6).
    pub elem_tasks: *const ak_evt_TaskDetailed,
}

/// Decode vtable for `ListTasksDetailedResponse` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_ListTasksDetailedResponse {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_ListTasksDetailedResponse),
    >,
    pub new_tasks: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void) -> i64,
    >,
    pub apply_tasks: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_dfix_TaskDetailed),
    >,
    pub add_tasks_parent_task_ids: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_span, i32),
    >,
    pub add_tasks_data_dependencies: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_span, i32),
    >,
    pub add_tasks_expected_output_ids: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_span, i32),
    >,
    pub add_tasks_retry_of_ids: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_span, i32),
    >,
    pub add_tasks_options_options: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_dfix_TaskOptionsOptionsEntry, i32),
    >,
}

/// Encode vtable for `ListTaskSummaryResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_ListTaskSummaryResponse {
    pub loop_tasks: Option<ak_loop_f>,
    /// The element type has loop slots of its own (ABI v1 section 6).
    pub elem_tasks: *const ak_evt_TaskSummary,
}

/// Decode vtable for `ListTaskSummaryResponse` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_ListTaskSummaryResponse {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_ListTaskSummaryResponse),
    >,
    pub new_tasks: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void) -> i64,
    >,
    pub apply_tasks: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_dfix_TaskSummary),
    >,
    pub add_tasks_options_options: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, i64, *const ak_dfix_TaskOptionsOptionsEntry, i32),
    >,
}

/// Encode vtable for `ListProbeResponse`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_ListProbeResponse {
    pub loop_probes: Option<ak_loop_f>,
}
